# kafka_example

./: docker-compose.yaml
node_consumer/: index.js  package-lock.json  package.json
python_producer/: producer.py  pyproject.toml
python_producer/tests/: test_python_producer.py
scripts/: create_topic  delete_topic  kafka_status  show_all_topics  show_specific_topic  test_shell_consumer  test_shell_producer  zookeeper_status
